05 k8s 的网络/04 k8s-svc-no-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-svc-no-selector
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cluster-svc-no-selector
  namespace: default
subsets:
- addresses:
  - ip: 220.181.38.251 # 百度
  - ip: 221.122.82.30 # 搜狗 
  - ip: 61.129.7.47 # QQ
  ports:
  - name: http
    port: 80
    protocol: TCP
